--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 h4{
     color: rgb(0, 0, 0);
+    
 }
 
 body{
@@ -30,6 +31,10 @@ a {
 }
 
 .text-muted {
-    bs-text-opacity: 1;
-    color: white!important;
+
+    color: black!important;
+}
+h5{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
 }
